# 3dgameengine_jmp

./: .gitignore  Basic.vs  CMakeLists.txt  Light.hpp  Main.cpp  Main.hpp  MeshData.cpp  ModelGL.cpp  README.md  SceneGraphNode.cpp  SceneGraphNode.hpp  SceneTest.txt  ShaderGL.hpp  TestMain.cpp  Utilities.cpp
Base/: MaterialData.hpp  MeshGL.hpp  ModelData.cpp  ModelGL.hpp  ShaderGL.cpp  TextureData.cpp  TextureData.hpp
core/: Basic.ps  Basic.vs  Box.ps  Box.vs  Camera.cpp  Camera.hpp  Light.cpp  MaterialData.cpp  MeshData.hpp  MeshGL.cpp  MeshGL.hpp  MeshShaderGL.cpp  MeshShaderGL.hpp  ModelData.cpp  ModelData.hpp  ModelGL.cpp  ModelGL.hpp  ModelLoader.cpp  ModelLoader.hpp  MousePicker.cpp  MousePicker.hpp  TextureData.cpp  Utilities.h
libs/: px_render.h
libs/irrKlang/: CIrrKlangAudioStreamLoaderMP3.h  CIrrKlangAudioStreamMP3.h  ikpMP3.cpp
physics/: Actor.cpp  Actor.hpp  Collide.cpp  Collide.hpp
sound/: Sound.cpp  Sound.hpp
